Fixed some alignment issues for mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,17 @@ Author: Tracy Gibson
 /* BASE STYLES
 /*******************************************/
     
-    body {
-        color: #98878F;
+    html {
         font-size: 12px;
         line-height: 1.4;
         font-family: 'Open Sans';
-        width: 1600px;
-        height: auto;
+    }
+    
+    body {
+        color: #98878F;
+        width: 100%;
+        height: 100%;
+        background-color: #494E6B;
     }
     /******************************************
 /* LAYOUT
@@ -57,8 +61,8 @@ Author: Tracy Gibson
     }
     
     #homepage_container {
-        width: 1600px;
-        height: auto;
+        width: 100%;
+        height: 100%;
     }
     /* MOBILE */
     /* Phone Devices (covers most mobile devices, including iPhone 6 and 6+ and Samsung) - Portrait and Landscape */
@@ -67,21 +71,27 @@ Author: Tracy Gibson
         .tracy_bgimage {
             background: url("../images/Tracy_homepage.jpg");
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: cover;
+            float: left;
             width: 100%;
-            height: auto;
+            height: 100%;
             max-width: 736px;
             min-width: 320px;
-            padding: 1200px 1600px 0 0;
-            position: absolute;
-            top: 0;
-            left: 0;
+            min-height: 100%;
+            position: relative;
+            padding-top: 60%;
         }
         .social_container {
             position: relative;
+            width: 100%;
+            height: 100%;
             display: flex;
-            width: 736px;
-            padding: 30px 20px 0 650px;
+            clear: both;
+            float: left;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 10px;
+            justify-content: center;
         }
         .emailimg,
         .linkedinimg,
@@ -91,25 +101,28 @@ Author: Tracy Gibson
         .twitterimg,
         .pinterestimg,
         .snapchatimg {
-            max-width: 60px;
-            max-height: 60px;
-            margin-left: 10px;
+            max-width: 20px;
+            max-height: 20px;
+            margin-left: 8px;
         }
         .myname_container {
             position: relative;
-            height: 200px;
-            margin: 700px 0 10px 110px;
+            text-align: center;
+            margin-bottom: -40px;
+        }
+        .tracygibsonimg {
+            width: 40%;
             border: 0;
         }
         .menu_container ul {
+            clear: both;
+            float: left;
             width: 100%;
             height: auto;
             padding: 0;
+            margin: 0;
         }
         .menu {
-            clear: both;
-            float: left;
-            margin-top: 96px;
             text-align: center;
         }
         a.aboutmelink:link,
@@ -138,25 +151,26 @@ Author: Tracy Gibson
         .menu li {
             background-color: #985E6D;
             font-family: Verdana, Geneva, sans-serif;
-            font-weight: 700;
-            padding: 40px;
-            font-size: 45px;
+            font-weight: 200;
+            padding: 10px;
+            font-size: 1.5rem;
             color: #192231;
-            border-top: solid 3px #192231;
+            border-top: solid 1px #192231;
         }
         .contact {
-            border-bottom: solid 3px #192231;
+            border-bottom: solid 1px #192231;
         }
         .footer_container {
+            clear: both;
+            float: left;
             width: 100%;
             height: 125px;
             background-color: #192231;
             position: relative;
             color: white;
-            font-size: 18px;
+            font-size: 1rem;
             text-align: center;
             vertical-align: middle;
-            margin-top: 835px;
             padding-top: 40px;
         }
     }
@@ -168,13 +182,14 @@ Author: Tracy Gibson
             background-repeat: no-repeat;
             background-size: contain;
             width: 100%;
-            height: auto;
-            max-width: 1200px;
+            height: 100%;
+            max-width: 1024px;
             min-width: 737px;
-            padding: 1200px 1600px 0 0;
+            padding: 1024px 900px 0 0;
             position: absolute;
             top: 0;
             left: 0;
+            margin: auto;
         }
         .social_container {
             position: relative;
@@ -203,7 +218,7 @@ Author: Tracy Gibson
         /* Nav Menu */
         .menu_container {
             clear: both;
-            float: left;
+            float: right;
             position: relative;
             margin: 226px 0 0 0;
             padding: 0;
@@ -219,7 +234,7 @@ Author: Tracy Gibson
             opacity: 0.7;
             font-family: Verdana, Geneva, sans-serif;
             font-weight: bold;
-            font-size: 30px;
+            font-size: 3rem;
             color: #192231;
             margin-right: -5px;
         }
@@ -277,12 +292,13 @@ Author: Tracy Gibson
             background-size: contain;
             width: 100%;
             height: auto;
-            max-width: 1201px;
-            min-width: 737px;
-            padding: 1201px 1600px 0 0;
-            position: absolute;
+            max-width: 1024px;
+            min-width: 900px;
+            padding: 1024px 704px 0 0;
+            position: relative;
             top: 0;
             left: 0;
+            margin: auto;
         }
         .social_container {
             position: relative;
@@ -327,7 +343,7 @@ Author: Tracy Gibson
             opacity: 0.7;
             font-family: Verdana, Geneva, sans-serif;
             font-weight: bold;
-            font-size: 26px;
+            font-size: 3em;
             color: #192231;
             margin-right: -5px;
         }
